crates/ladder_types/tests/ui/generated/should_pass/test__unary_wrapper_ladder__R1_minus_R1.rs

use ladder_types::unary_wrapper_ladder::*;

fn main() {
   let _ = R1::new() - R1::new();
}
