crates/ladder_types/tests/ui/generated/should_fail/test__unary_wrapper_ladder__R3_minus_R0.rs

use ladder_types::unary_wrapper_ladder::*;

fn main() {
   let _ = R3::new() - R0::new();
}
